# praxis

./: .dockerignore  .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-backend.yml  keep-warm.yml
praxis/: __init__.py  build.py  cli.py  config.py  demo.py  models.py  report.py
praxis/agents/: __init__.py  executor.py  learner.py  offline_brain.py  planner.py  validator.py
praxis/capabilities/: __init__.py  primitives.py  registry.py  synthesis.py
praxis/llm/: __init__.py  base.py  providers.py  scripted.py
praxis/memory/: __init__.py  capability_memory.py  compaction.py  execution_memory.py  retrieval.py  signature.py  store.py
praxis/orchestrator/: __init__.py  graph.py  state.py
praxis/platform/: __init__.py  base.py
praxis/platform/fake/: __init__.py  data.py  server.py
praxis/platform/linear/: __init__.py  client.py
praxis/server/: app.py
praxis/server/static/: index.html
tests/: conftest.py  test_capability_lifecycle.py  test_compaction.py  test_end_to_end.py  test_fake_linear.py  test_fuzz_regression.py  test_learning.py  test_live_smoke.py  test_llm_providers.py  test_memory.py  test_overplanning.py  test_robustness.py  test_rollback.py  test_signature.py  test_synthesis.py  test_verification.py
web/: .dockerignore  .env.example  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: fonts.ts  globals.css  layout.tsx  page.tsx
web/app/about/: page.tsx
web/app/capabilities/: page.tsx
web/app/learning/: page.tsx
web/app/memory/: page.tsx
web/app/papi/[...path]/: route.ts
web/components/: LoopDiagram.tsx  Markdown.tsx  PageHeader.tsx  Report.tsx  Shell.tsx  ui.tsx
web/lib/: api.ts  types.ts
